# Agents_Framework

./: .gitignore  01-State-Synchronization-Deep-Analysis.md  02-Industry-Use-Cases-Implementation-Guide.md  03-Frontend-Backend-State-Sync-Analysis.md  04-update_deal-and-AGUI-Tools-Explained.md  FILE-PATHS.md  README.md  a2a_exploration.json  explore_a2a.py  explore_packages.py  get_package_details_output.json
Adk_Copilotkit_UI_App/: .gitignore  Demo working-Shared State.txt  EDITABLE-PROPOSAL-UPDATE.md  PROPOSAL-FEATURE-SUMMARY.md  README.md  UI-PROPOSAL-SECTION-GUIDE.md  USE_CASES_AND_APPROVAL.md
Adk_Copilotkit_UI_App/backend/: AGUITOOLSET-TOOL-DETECTION.md  README.md  config.py  env.example  main.py  port_check.py  pyproject.toml  requirements.txt  run.sh  session_persistence_wrapper.py  session_service.py  test_backend.py
Adk_Copilotkit_UI_App/backend/agents/: __init__.py  deal_builder.py  knowledge_qa.py
a2a_sdk/: .gitignore  A2A_SDK_COMPARISON.md  A2A_SDK_COMPREHENSIVE_ANALYSIS.md  README.md  analyze_a2a_sdk.py
adk/: .gitignore  FILE-PATHS.md  README.md  explore_packages_agui.py  get_package_details.py  get_package_details_agui.py
adk_explore_callback/: README.md  callback_exploration.py  callback_exploration_sensitive_data.py  callback_exploration_teach.py  callback_plugin_agent_full_demo.py  callback_plugin_multi_agent_full_demo.py  llm_cache_multi_agent.db  main.py  pyproject.toml
ag_ui/: 00-Document-Generation-Info.md  (+5 more)
copilot-adk-app/backend/: Dockerfile  agent.py  auth.py  config.py  db.py  env.example  main.py  pyproject.toml  requirements.txt
(+248 files in other folders)
